code commit on readme file and login file

--- a/Designs/login.html
+++ b/Designs/login.html
@@ -1,4 +1,5 @@
 <!-- HTML for the login form -->
+<script src="Desighs/js/login.js"></script>
 <form>
     <label for="username">Username:</label><br>
     <input type="text" id="username" name="username"><br>
